--- a/samples/dialog/index.html
+++ b/samples/dialog/index.html
@@ -69,7 +69,8 @@
 
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
-    <script src="../util/mu.js"></script>
+    <script src="/dist/mu.js"></script>
+    <script src="/dist/mu.touch.js"></script>
     <script src="mu.dialog.js"></script>
     <script>
         var $env = $('header');
