--- a/manualtest/dialog.html
+++ b/manualtest/dialog.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="/src/styles/base.css">
     <link rel="stylesheet" href="/src/styles/manual.css">
     <link rel="stylesheet" href="/src/styles/mu.css">
+    <style>
+        .pop2{
+            left: 0;
+            top: 0;
+        }
+    </style>
 </head>
 
 <body>
