--- a/manualtest/dialogSlider.html
+++ b/manualtest/dialogSlider.html
@@ -63,10 +63,7 @@
 
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
-    <script src="/dist/mu.js"></script>
-    <script src="/dist/mu.touch.js"></script>
-    <script src="/dist/mu.dialog.js"></script>
-    <script src="mu.slider.js"></script>
+    <script src="/dist/mu.all.min.js"></script>
     <script>
 
 
