--- a/manualtest/index.html
+++ b/manualtest/index.html
@@ -26,6 +26,7 @@
             <li><a href="/manualtest/slider.html">轮播</a></li>
             <li><a href="/manualtest/touch.html">触屏事件</a></li>
             <li><a href="/manualtest/sliderpage.html">滑动页面</a></li>
+            <li><a href="/manualtest/dialogSlider.html">弹窗滑动</a></li>
         </ul>
 
 
