--- a/samples/slider/slidepage4zt.html
+++ b/samples/slider/slidepage4zt.html
@@ -43,17 +43,17 @@
 <body>
     <div class="wrapper">
         <div class="page page0">
-            <div class="m_cont" style="display: block;"><div class="item_edit item_drag" data-type="2" style="position:absolute; left:9%; top:53%; width:8%; height:40%; z-index:auto; opacity:0; -webkit-animation:lengthDown 1s ease 0s 1 normal forwards; -webkit-animation-play-state:initial; background-image:none; background-color:rgb(253, 113, 55); background-size:100%; background-repeat:no-repeat; animation:lengthDown 1s ease 0s 1 normal forwards; animation-play-state:initial;"><div class="m_elem"></div></div><div class="item_edit item_drag" data-type="2" style="position:absolute; left:26%; top:67%; width:8%; height:26%; z-index:auto; opacity:0; -webkit-animation:lengthDown 1s ease 0.2s 1 normal forwards; -webkit-animation-play-state:initial; background-image:none; background-color:rgb(160, 115, 253); background-size:100%; background-repeat:no-repeat; animation:lengthDown 1s ease 0.2s 1 normal forwards; animation-play-state:initial;"><div class="m_elem"></div></div><div class="item_edit item_drag" data-type="2" style="position:absolute; left:43%; top:59%; width:9%; height:34%; z-index:auto; opacity:0; -webkit-animation:lengthDown 1s ease 0.3s 1 normal forwards; -webkit-animation-play-state:initial; background-image:none; background-color:rgb(133, 205, 76); background-size:100%; background-repeat:no-repeat; animation:lengthDown 1s ease 0.3s 1 normal forwards; animation-play-state:initial;"><div class="m_elem"></div></div><div class="item_edit item_drag" data-type="2" style="position:absolute; left:62%; top:41%; width:8%; height:52%; z-index:auto; opacity:0; -webkit-animation:lengthDown 1s ease 0.4s 1 normal forwards; -webkit-animation-play-state:initial; background-image:none; background-color:rgb(99, 146, 255); background-size:100%; background-repeat:no-repeat; animation:lengthDown 1s ease 0.4s 1 normal forwards; animation-play-state:initial;"><div class="m_elem"></div></div><div class="item_edit item_drag" data-type="2" style="position:absolute; left:80%; top:24%; width:9%; height:69%; z-index:auto; opacity:0; -webkit-animation:lengthDown 1s ease 0.5s 1 normal forwards; -webkit-animation-play-state:initial; background-image:none; background-color:rgb(254, 210, 100); background-size:100%; background-repeat:no-repeat; animation:lengthDown 1s ease 0.5s 1 normal forwards; animation-play-state:initial;"><div class="m_elem"></div></div><div class="item_edit item_drag item_jump" data-type="30" data-page="5" style="color:rgb(255, 255, 255); width:85%; left:7%; top:5%; position:absolute; height:9%; border-radius:5px; z-index:auto; animation:fadeInRight 1s ease 0s 1 normal forwards; opacity:0; background-color:rgb(46, 184, 74);"><div class="m_elem"><p>查看答案</p></div></div></div>
+            <div class="m_cont" style="display: none;"><div class="item_edit item_drag" data-type="2" style="position:absolute; left:9%; top:53%; width:8%; height:40%; z-index:auto; opacity:0; -webkit-animation:lengthDown 1s ease 0s 1 normal forwards; -webkit-animation-play-state:initial; background-image:none; background-color:rgb(253, 113, 55); background-size:100%; background-repeat:no-repeat; animation:lengthDown 1s ease 0s 1 normal forwards; animation-play-state:initial;"><div class="m_elem"></div></div><div class="item_edit item_drag" data-type="2" style="position:absolute; left:26%; top:67%; width:8%; height:26%; z-index:auto; opacity:0; -webkit-animation:lengthDown 1s ease 0.2s 1 normal forwards; -webkit-animation-play-state:initial; background-image:none; background-color:rgb(160, 115, 253); background-size:100%; background-repeat:no-repeat; animation:lengthDown 1s ease 0.2s 1 normal forwards; animation-play-state:initial;"><div class="m_elem"></div></div><div class="item_edit item_drag" data-type="2" style="position:absolute; left:43%; top:59%; width:9%; height:34%; z-index:auto; opacity:0; -webkit-animation:lengthDown 1s ease 0.3s 1 normal forwards; -webkit-animation-play-state:initial; background-image:none; background-color:rgb(133, 205, 76); background-size:100%; background-repeat:no-repeat; animation:lengthDown 1s ease 0.3s 1 normal forwards; animation-play-state:initial;"><div class="m_elem"></div></div><div class="item_edit item_drag" data-type="2" style="position:absolute; left:62%; top:41%; width:8%; height:52%; z-index:auto; opacity:0; -webkit-animation:lengthDown 1s ease 0.4s 1 normal forwards; -webkit-animation-play-state:initial; background-image:none; background-color:rgb(99, 146, 255); background-size:100%; background-repeat:no-repeat; animation:lengthDown 1s ease 0.4s 1 normal forwards; animation-play-state:initial;"><div class="m_elem"></div></div><div class="item_edit item_drag" data-type="2" style="position:absolute; left:80%; top:24%; width:9%; height:69%; z-index:auto; opacity:0; -webkit-animation:lengthDown 1s ease 0.5s 1 normal forwards; -webkit-animation-play-state:initial; background-image:none; background-color:rgb(254, 210, 100); background-size:100%; background-repeat:no-repeat; animation:lengthDown 1s ease 0.5s 1 normal forwards; animation-play-state:initial;"><div class="m_elem"></div></div><div class="item_edit item_drag item_jump" data-type="30" data-page="5" style="color:rgb(255, 255, 255); width:85%; left:7%; top:5%; position:absolute; height:9%; border-radius:5px; z-index:auto; animation:fadeInRight 1s ease 0s 1 normal forwards; opacity:0; background-color:rgb(46, 184, 74);"><div class="m_elem"><p>查看答案</p></div></div></div>
         </div>
         <div class="page page1" style="color: rgb(51, 51, 51);background-image: url(http://i2.w.hjfile.cn/news/201506/201506042570212815.jpg);background-color: rgba(0, 0, 0, 0);background-size: auto 100%;background-position: 50% 50%;background-repeat: no-repeat;">
-            <div class="m_cont" style="display: block;">
+            <div class="m_cont" style="display: none;">
                 <div class="item_edit item_drag item_btn" data-type="6" data-src="http://m.hujiang.com" style="position:absolute; left:29%; top:90%; width:40%; height:8%; z-index:1; background-image:url(http://i2.w.hjfile.cn/news/201503/201503311254850561.png); background-size:auto 100%; background-position:50% 50%; background-repeat:no-repeat;">
                     <div class="m_elem"></div>
                 </div>
             </div>
             
         </div>
-        <div class="page" style="background: #0cF;">
+        <div class="page page2" style="background: #0cF;">
             <div class="m_cont" style="display: none;">
                 <div class="item_edit item_drag item_btn" data-type="6" style="color:rgb(255, 255, 255); width:70%; left:15%; top:82%; position:absolute; height:10%; border-radius:50px; -webkit-animation:tada 1s ease 0s 1 normal; animation:tada 1s ease 0s 1 normal; opacity: 1; z-index:auto; background-color:rgb(51, 129, 219);">
                     <div class="m_elem">
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-        <div class="page" style="background: #Fc0;">
+        <div class="page page3" style="background: #Fc0;">
             4
         </div>
     </div>
@@ -89,12 +89,12 @@
             isLoop: true,
             // autoSlide: true,
             isVert: true,
-            beforeSlide: function() {
-                // $('.page').eq(index).find('.m_cont').show();
+            beforeSlide: function($nextPage, $prevPage) {
             },
-            afterSlide: function(index) {
-                // console.log(index);
-                // this.$children.eq(index-1).find('.m_cont').hide();
+            afterSlide: function($nextPage, $prevPage, index) {
+                $nextPage.find('.m_cont').show();
+                console.log($nextPage, $prevPage);
+                $prevPage.find('.m_cont').hide();
             }
         });
 
