update slider, page

--- a/samples/slider/slidepage4zt.html
+++ b/samples/slider/slidepage4zt.html
@@ -93,7 +93,7 @@
             },
             afterSlide: function($nextPage, $prevPage, index) {
                 $nextPage.find('.m_cont').show();
-                console.log($nextPage, $prevPage);
+                console.log($nextPage, $prevPage, index);
                 $prevPage.find('.m_cont').hide();
             }
         });
