slider still has issue

--- a/samples/slider/slidepage4zt.html
+++ b/samples/slider/slidepage4zt.html
@@ -86,7 +86,7 @@
     <script>
         mu.util.preventScroll();
         var slider = new MuSlider('.wrapper', {
-            isLoop: true,
+            // isLoop: true,
             // autoSlide: true,
             isVert: true,
             beforeSlide: function($nextPage, $prevPage) {
