--- a/manualtest/index.html
+++ b/manualtest/index.html
@@ -14,23 +14,24 @@
 
 <body>
     
+    <header class="cf">
+        <h3>MU</h3>
+        <p>Simple UI components for mobile</p>
+    </header>
     <div class="wrapper">
-        <div class="title cf">
-            <h3>MU for mobile</h3>
-        </div>
-
         <ul class="list">
-            <li><a href="/manualtest/util.html">工具方法</a></li>
-            <li><a href="/manualtest/dialog.html">弹窗</a></li>
-            <li><a href="/manualtest/pagetransition.html">页面转场</a></li>
-            <li><a href="/manualtest/slider.html">轮播</a></li>
-            <li><a href="/manualtest/touch.html">触屏事件</a></li>
+            <li><a href="/manualtest/util.html">工具 | Utility</a></li>
+            <li><a href="/manualtest/dialog.html">弹窗 | Dialog</a></li>
+            <li><a href="/manualtest/pagetransition.html">转场 | Page</a></li>
+            <li><a href="/manualtest/slider.html">轮播 | Slider</a></li>
+            <li><a href="/manualtest/touch.html">事件 | TouchEvent</a></li>
             <li><a href="/manualtest/sliderpage.html">滑动页面</a></li>
             <li><a href="/manualtest/dialogSlider.html">弹窗滑动</a></li>
         </ul>
-
-
     </div>
+    <footer>
+        <a href="https://github.com/Roeis" target="_blank">Github</a> | copyright @roeis
+    </footer>
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
     <script src="/dist/mu.js"></script>
