--- a/manualtest/pagetransition.html
+++ b/manualtest/pagetransition.html
@@ -14,7 +14,7 @@
 
 <body>
     
-    <div class="wrapper">
+    <div class="wrapper wrapper-one">
         <div class="page">
             <div class="title">
                 <h3>单屏切换</h3>
@@ -43,7 +43,7 @@
     <script src="/vendor/zepto.min.js"></script>
     <script src="/dist/mu.js"></script>
     <script src="/dist/mu.touch.js"></script>
-    <script src="/dist/mu.page.transition.js"></script>
+    <script src="/dist/mu.page.js"></script>
     <script>
         var page = new MuPage('.page', {
             isLoop: true,
