--- a/manualtest/dialogSlider.html
+++ b/manualtest/dialogSlider.html
@@ -57,13 +57,17 @@
                     <img src="http://i2.w.hjfile.cn/news/201507/201507063485218823.jpg" alt="">
                 </div>
             </div>
-           
+            <div class="li">
+                <div class="box">
+                    <img src="http://i2.w.hjfile.cn/news/201507/201507063485218823.jpg" alt="">
+                </div>
+            </div>
         </div>
     </div>
 
     <!-- <script src="/vendor/jq/jquery-2.1.3.min.js"></script> -->
     <script src="/vendor/zepto.min.js"></script>
-    <script src="/dist/mu.all.min.js"></script>
+    <script src="/dist/mu.latest.min.js"></script>
     <script>
 
 
