update range demo

--- a/samples/range/index.html
+++ b/samples/range/index.html
@@ -30,7 +30,11 @@
     -->
     <!-- External CSS -->
     <link href="base.css" rel="stylesheet">
-
+    <style>
+        .select-word{
+            color: #F50;
+        }
+    </style>
     <!-- 避免<style>，以及inline-style -->
 </head>
 
