update range demo

--- a/samples/range/index.html
+++ b/samples/range/index.html
@@ -31,8 +31,13 @@
     <!-- External CSS -->
     <link href="base.css" rel="stylesheet">
     <style>
+        .wrapper{
+            font-size: 1.6rem;
+            line-height: 2.4rem;
+        }
         .select-word{
             color: #F50;
+            font-weight: 700;
         }
     </style>
     <!-- 避免<style>，以及inline-style -->
